lab1/getting_started/parser.output
Nonterminals useless in grammar

    mainclass
    vardeclaration
    type


Terminals unused in grammar

    CLASS
    STATIC
    VOID
    MAIN
    PUBLIC
    COMMENT
    BOOLTYPE
    STRING
    STATEMENT


Rules useless in grammar

   36 mainclass: PUBLIC CLASS identifier LCB PUBLIC STATIC VOID MAIN LP STRING LHB RHB identifier LP LCB statement RCB RCB

   37 vardeclaration: type identifier SEMICOLON

   38 type: INTTYPE LHB RHB
   39     | BOOLTYPE
   40     | INTTYPE
   41     | identifier


State 9 conflicts: 6 shift/reduce
State 33 conflicts: 12 shift/reduce
State 40 conflicts: 5 shift/reduce
State 49 conflicts: 5 shift/reduce
State 56 conflicts: 2 shift/reduce
State 57 conflicts: 2 shift/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 2 shift/reduce
State 62 conflicts: 2 shift/reduce
State 63 conflicts: 2 shift/reduce
State 64 conflicts: 2 shift/reduce
State 65 conflicts: 2 shift/reduce
State 66 conflicts: 2 shift/reduce
State 67 conflicts: 2 shift/reduce
State 75 conflicts: 5 shift/reduce


Grammar

    0 $accept: root "end of file"

    1 root: statement

    2 statement: ε
    3          | LCB statements RCB
    4          | IF LP expression RP statement
    5          | IF LP expression RP statement ELSE statement
    6          | WHILE LP expression RP statement
    7          | PRINT LP expression RP SEMICOLON
    8          | identifier ASSIGN expression SEMICOLON
    9          | identifier LHB expression RHB ASSIGN expression SEMICOLON

   10 statements: ε
   11           | statements statement

   12 expression: expression PLUSOP expression
   13           | expression MINUSOP expression
   14           | expression MULTOP expression
   15           | expression DIVOP expression
   16           | expression ASSIGN expression
   17           | expression GT expression
   18           | expression LT expression
   19           | expression EQ expression
   20           | expression OR expression
   21           | expression AND expression
   22           | expression LHB expression RHB
   23           | expression PERIOD LENGTH
   24           | expression PERIOD identifier LP expression COMMA expression RP
   25           | TRUE
   26           | FALSE
   27           | identifier
   28           | THIS
   29           | NEW INTTYPE LHB expression RHB
   30           | NEW identifier LP RP
   31           | EXCLAMATION expression
   32           | factor

   33 factor: INT
   34       | LP expression RP

   35 identifier: IDENTIFIER


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    PLUSOP <std::string> (258) 12
    MINUSOP <std::string> (259) 13
    MULTOP <std::string> (260) 14
    DIVOP <std::string> (261) 15
    INT <std::string> (262) 33
    LP <std::string> (263) 4 5 6 7 24 30 34
    RP <std::string> (264) 4 5 6 7 24 30 34
    LHB <std::string> (265) 9 22 29
    RHB <std::string> (266) 9 22 29
    LCB <std::string> (267) 3
    RCB <std::string> (268) 3
    ASSIGN <std::string> (269) 8 9 16
    EQ <std::string> (270) 19
    AND <std::string> (271) 21
    OR <std::string> (272) 20
    GT <std::string> (273) 17
    LT <std::string> (274) 18
    CLASS <std::string> (275)
    STATIC <std::string> (276)
    VOID <std::string> (277)
    MAIN <std::string> (278)
    PUBLIC <std::string> (279)
    COMMENT <std::string> (280)
    PERIOD <std::string> (281) 23 24
    COMMA <std::string> (282) 24
    EXCLAMATION <std::string> (283) 31
    SEMICOLON <std::string> (284) 7 8 9
    INTTYPE <std::string> (285) 29
    BOOLTYPE <std::string> (286)
    STRING <std::string> (287)
    IF <std::string> (288) 4 5
    ELSE <std::string> (289) 5
    WHILE <std::string> (290) 6
    NEW <std::string> (291) 29 30
    LENGTH <std::string> (292) 23
    PRINT <std::string> (293) 7
    IDENTIFIER <std::string> (294) 35
    TRUE <std::string> (295) 25
    FALSE <std::string> (296) 26
    THIS <std::string> (297) 28
    STATEMENT <std::string> (298)
    IFTHEN (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    root <Node *> (46)
        on left: 1
        on right: 0
    statement <Node *> (47)
        on left: 2 3 4 5 6 7 8 9
        on right: 1 4 5 6 11
    statements <Node *> (48)
        on left: 10 11
        on right: 3 11
    expression <Node *> (49)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
        on right: 4 5 6 7 8 9 12 13 14 15 16 17 18 19 20 21 22 23 24 29 31 34
    factor <Node *> (50)
        on left: 33 34
        on right: 32
    identifier <Node *> (51)
        on left: 35
        on right: 8 9 24 27 30


State 0

    0 $accept: • root "end of file"

    LCB         shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    PRINT       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    $default  reduce using rule 2 (statement)

    root        go to state 6
    statement   go to state 7
    identifier  go to state 8


State 1

    3 statement: LCB • statements RCB

    $default  reduce using rule 10 (statements)

    statements  go to state 9


State 2

    4 statement: IF • LP expression RP statement
    5          | IF • LP expression RP statement ELSE statement

    LP  shift, and go to state 10


State 3

    6 statement: WHILE • LP expression RP statement

    LP  shift, and go to state 11


State 4

    7 statement: PRINT • LP expression RP SEMICOLON

    LP  shift, and go to state 12


State 5

   35 identifier: IDENTIFIER •

    $default  reduce using rule 35 (identifier)


State 6

    0 $accept: root • "end of file"

    "end of file"  shift, and go to state 13


State 7

    1 root: statement •

    $default  reduce using rule 1 (root)


State 8

    8 statement: identifier • ASSIGN expression SEMICOLON
    9          | identifier • LHB expression RHB ASSIGN expression SEMICOLON

    LHB     shift, and go to state 14
    ASSIGN  shift, and go to state 15


State 9

    3 statement: LCB statements • RCB
   11 statements: statements • statement

    LCB         shift, and go to state 1
    RCB         shift, and go to state 16
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    PRINT       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    LCB         [reduce using rule 2 (statement)]
    RCB         [reduce using rule 2 (statement)]
    IF          [reduce using rule 2 (statement)]
    WHILE       [reduce using rule 2 (statement)]
    PRINT       [reduce using rule 2 (statement)]
    IDENTIFIER  [reduce using rule 2 (statement)]

    statement   go to state 17
    identifier  go to state 8


State 10

    4 statement: IF LP • expression RP statement
    5          | IF LP • expression RP statement ELSE statement

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 25
    factor      go to state 26
    identifier  go to state 27


State 11

    6 statement: WHILE LP • expression RP statement

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 28
    factor      go to state 26
    identifier  go to state 27


State 12

    7 statement: PRINT LP • expression RP SEMICOLON

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 29
    factor      go to state 26
    identifier  go to state 27


State 13

    0 $accept: root "end of file" •

    $default  accept


State 14

    9 statement: identifier LHB • expression RHB ASSIGN expression SEMICOLON

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 30
    factor      go to state 26
    identifier  go to state 27


State 15

    8 statement: identifier ASSIGN • expression SEMICOLON

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 31
    factor      go to state 26
    identifier  go to state 27


State 16

    3 statement: LCB statements RCB •

    $default  reduce using rule 3 (statement)


State 17

   11 statements: statements statement •

    $default  reduce using rule 11 (statements)


State 18

   33 factor: INT •

    $default  reduce using rule 33 (factor)


State 19

   34 factor: LP • expression RP

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 32
    factor      go to state 26
    identifier  go to state 27


State 20

   31 expression: EXCLAMATION • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 33
    factor      go to state 26
    identifier  go to state 27


State 21

   29 expression: NEW • INTTYPE LHB expression RHB
   30           | NEW • identifier LP RP

    INTTYPE     shift, and go to state 34
    IDENTIFIER  shift, and go to state 5

    identifier  go to state 35


State 22

   25 expression: TRUE •

    $default  reduce using rule 25 (expression)


State 23

   26 expression: FALSE •

    $default  reduce using rule 26 (expression)


State 24

   28 expression: THIS •

    $default  reduce using rule 28 (expression)


State 25

    4 statement: IF LP expression • RP statement
    5          | IF LP expression • RP statement ELSE statement
   12 expression: expression • PLUSOP expression
   13           | expression • MINUSOP expression
   14           | expression • MULTOP expression
   15           | expression • DIVOP expression
   16           | expression • ASSIGN expression
   17           | expression • GT expression
   18           | expression • LT expression
   19           | expression • EQ expression
   20           | expression • OR expression
   21           | expression • AND expression
   22           | expression • LHB expression RHB
   23           | expression • PERIOD LENGTH
   24           | expression • PERIOD identifier LP expression COMMA expression RP

    PLUSOP   shift, and go to state 36
    MINUSOP  shift, and go to state 37
    MULTOP   shift, and go to state 38
    DIVOP    shift, and go to state 39
    RP       shift, and go to state 40
    LHB      shift, and go to state 41
    ASSIGN   shift, and go to state 42
    EQ       shift, and go to state 43
    AND      shift, and go to state 44
    OR       shift, and go to state 45
    GT       shift, and go to state 46
    LT       shift, and go to state 47
    PERIOD   shift, and go to state 48


State 26

   32 expression: factor •

    $default  reduce using rule 32 (expression)


State 27

   27 expression: identifier •

    $default  reduce using rule 27 (expression)


State 28

    6 statement: WHILE LP expression • RP statement
   12 expression: expression • PLUSOP expression
   13           | expression • MINUSOP expression
   14           | expression • MULTOP expression
   15           | expression • DIVOP expression
   16           | expression • ASSIGN expression
   17           | expression • GT expression
   18           | expression • LT expression
   19           | expression • EQ expression
   20           | expression • OR expression
   21           | expression • AND expression
   22           | expression • LHB expression RHB
   23           | expression • PERIOD LENGTH
   24           | expression • PERIOD identifier LP expression COMMA expression RP

    PLUSOP   shift, and go to state 36
    MINUSOP  shift, and go to state 37
    MULTOP   shift, and go to state 38
    DIVOP    shift, and go to state 39
    RP       shift, and go to state 49
    LHB      shift, and go to state 41
    ASSIGN   shift, and go to state 42
    EQ       shift, and go to state 43
    AND      shift, and go to state 44
    OR       shift, and go to state 45
    GT       shift, and go to state 46
    LT       shift, and go to state 47
    PERIOD   shift, and go to state 48


State 29

    7 statement: PRINT LP expression • RP SEMICOLON
   12 expression: expression • PLUSOP expression
   13           | expression • MINUSOP expression
   14           | expression • MULTOP expression
   15           | expression • DIVOP expression
   16           | expression • ASSIGN expression
   17           | expression • GT expression
   18           | expression • LT expression
   19           | expression • EQ expression
   20           | expression • OR expression
   21           | expression • AND expression
   22           | expression • LHB expression RHB
   23           | expression • PERIOD LENGTH
   24           | expression • PERIOD identifier LP expression COMMA expression RP

    PLUSOP   shift, and go to state 36
    MINUSOP  shift, and go to state 37
    MULTOP   shift, and go to state 38
    DIVOP    shift, and go to state 39
    RP       shift, and go to state 50
    LHB      shift, and go to state 41
    ASSIGN   shift, and go to state 42
    EQ       shift, and go to state 43
    AND      shift, and go to state 44
    OR       shift, and go to state 45
    GT       shift, and go to state 46
    LT       shift, and go to state 47
    PERIOD   shift, and go to state 48


State 30

    9 statement: identifier LHB expression • RHB ASSIGN expression SEMICOLON
   12 expression: expression • PLUSOP expression
   13           | expression • MINUSOP expression
   14           | expression • MULTOP expression
   15           | expression • DIVOP expression
   16           | expression • ASSIGN expression
   17           | expression • GT expression
   18           | expression • LT expression
   19           | expression • EQ expression
   20           | expression • OR expression
   21           | expression • AND expression
   22           | expression • LHB expression RHB
   23           | expression • PERIOD LENGTH
   24           | expression • PERIOD identifier LP expression COMMA expression RP

    PLUSOP   shift, and go to state 36
    MINUSOP  shift, and go to state 37
    MULTOP   shift, and go to state 38
    DIVOP    shift, and go to state 39
    LHB      shift, and go to state 41
    RHB      shift, and go to state 51
    ASSIGN   shift, and go to state 42
    EQ       shift, and go to state 43
    AND      shift, and go to state 44
    OR       shift, and go to state 45
    GT       shift, and go to state 46
    LT       shift, and go to state 47
    PERIOD   shift, and go to state 48


State 31

    8 statement: identifier ASSIGN expression • SEMICOLON
   12 expression: expression • PLUSOP expression
   13           | expression • MINUSOP expression
   14           | expression • MULTOP expression
   15           | expression • DIVOP expression
   16           | expression • ASSIGN expression
   17           | expression • GT expression
   18           | expression • LT expression
   19           | expression • EQ expression
   20           | expression • OR expression
   21           | expression • AND expression
   22           | expression • LHB expression RHB
   23           | expression • PERIOD LENGTH
   24           | expression • PERIOD identifier LP expression COMMA expression RP

    PLUSOP     shift, and go to state 36
    MINUSOP    shift, and go to state 37
    MULTOP     shift, and go to state 38
    DIVOP      shift, and go to state 39
    LHB        shift, and go to state 41
    ASSIGN     shift, and go to state 42
    EQ         shift, and go to state 43
    AND        shift, and go to state 44
    OR         shift, and go to state 45
    GT         shift, and go to state 46
    LT         shift, and go to state 47
    PERIOD     shift, and go to state 48
    SEMICOLON  shift, and go to state 52


State 32

   12 expression: expression • PLUSOP expression
   13           | expression • MINUSOP expression
   14           | expression • MULTOP expression
   15           | expression • DIVOP expression
   16           | expression • ASSIGN expression
   17           | expression • GT expression
   18           | expression • LT expression
   19           | expression • EQ expression
   20           | expression • OR expression
   21           | expression • AND expression
   22           | expression • LHB expression RHB
   23           | expression • PERIOD LENGTH
   24           | expression • PERIOD identifier LP expression COMMA expression RP
   34 factor: LP expression • RP

    PLUSOP   shift, and go to state 36
    MINUSOP  shift, and go to state 37
    MULTOP   shift, and go to state 38
    DIVOP    shift, and go to state 39
    RP       shift, and go to state 53
    LHB      shift, and go to state 41
    ASSIGN   shift, and go to state 42
    EQ       shift, and go to state 43
    AND      shift, and go to state 44
    OR       shift, and go to state 45
    GT       shift, and go to state 46
    LT       shift, and go to state 47
    PERIOD   shift, and go to state 48


State 33

   12 expression: expression • PLUSOP expression
   13           | expression • MINUSOP expression
   14           | expression • MULTOP expression
   15           | expression • DIVOP expression
   16           | expression • ASSIGN expression
   17           | expression • GT expression
   18           | expression • LT expression
   19           | expression • EQ expression
   20           | expression • OR expression
   21           | expression • AND expression
   22           | expression • LHB expression RHB
   23           | expression • PERIOD LENGTH
   24           | expression • PERIOD identifier LP expression COMMA expression RP
   31           | EXCLAMATION expression •

    PLUSOP   shift, and go to state 36
    MINUSOP  shift, and go to state 37
    MULTOP   shift, and go to state 38
    DIVOP    shift, and go to state 39
    LHB      shift, and go to state 41
    ASSIGN   shift, and go to state 42
    EQ       shift, and go to state 43
    AND      shift, and go to state 44
    OR       shift, and go to state 45
    GT       shift, and go to state 46
    LT       shift, and go to state 47
    PERIOD   shift, and go to state 48

    PLUSOP    [reduce using rule 31 (expression)]
    MINUSOP   [reduce using rule 31 (expression)]
    MULTOP    [reduce using rule 31 (expression)]
    DIVOP     [reduce using rule 31 (expression)]
    LHB       [reduce using rule 31 (expression)]
    ASSIGN    [reduce using rule 31 (expression)]
    EQ        [reduce using rule 31 (expression)]
    AND       [reduce using rule 31 (expression)]
    OR        [reduce using rule 31 (expression)]
    GT        [reduce using rule 31 (expression)]
    LT        [reduce using rule 31 (expression)]
    PERIOD    [reduce using rule 31 (expression)]
    $default  reduce using rule 31 (expression)


State 34

   29 expression: NEW INTTYPE • LHB expression RHB

    LHB  shift, and go to state 54


State 35

   30 expression: NEW identifier • LP RP

    LP  shift, and go to state 55


State 36

   12 expression: expression PLUSOP • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 56
    factor      go to state 26
    identifier  go to state 27


State 37

   13 expression: expression MINUSOP • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 57
    factor      go to state 26
    identifier  go to state 27


State 38

   14 expression: expression MULTOP • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 58
    factor      go to state 26
    identifier  go to state 27


State 39

   15 expression: expression DIVOP • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 59
    factor      go to state 26
    identifier  go to state 27


State 40

    4 statement: IF LP expression RP • statement
    5          | IF LP expression RP • statement ELSE statement

    LCB         shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    PRINT       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    LCB         [reduce using rule 2 (statement)]
    IF          [reduce using rule 2 (statement)]
    WHILE       [reduce using rule 2 (statement)]
    PRINT       [reduce using rule 2 (statement)]
    IDENTIFIER  [reduce using rule 2 (statement)]
    $default    reduce using rule 2 (statement)

    statement   go to state 60
    identifier  go to state 8


State 41

   22 expression: expression LHB • expression RHB

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 61
    factor      go to state 26
    identifier  go to state 27


State 42

   16 expression: expression ASSIGN • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 62
    factor      go to state 26
    identifier  go to state 27


State 43

   19 expression: expression EQ • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 63
    factor      go to state 26
    identifier  go to state 27


State 44

   21 expression: expression AND • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 64
    factor      go to state 26
    identifier  go to state 27


State 45

   20 expression: expression OR • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 65
    factor      go to state 26
    identifier  go to state 27


State 46

   17 expression: expression GT • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 66
    factor      go to state 26
    identifier  go to state 27


State 47

   18 expression: expression LT • expression

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 67
    factor      go to state 26
    identifier  go to state 27


State 48

   23 expression: expression PERIOD • LENGTH
   24           | expression PERIOD • identifier LP expression COMMA expression RP

    LENGTH      shift, and go to state 68
    IDENTIFIER  shift, and go to state 5

    identifier  go to state 69


State 49

    6 statement: WHILE LP expression RP • statement

    LCB         shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    PRINT       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    LCB         [reduce using rule 2 (statement)]
    IF          [reduce using rule 2 (statement)]
    WHILE       [reduce using rule 2 (statement)]
    PRINT       [reduce using rule 2 (statement)]
    IDENTIFIER  [reduce using rule 2 (statement)]
    $default    reduce using rule 2 (statement)

    statement   go to state 70
    identifier  go to state 8


State 50

    7 statement: PRINT LP expression RP • SEMICOLON

    SEMICOLON  shift, and go to state 71


State 51

    9 statement: identifier LHB expression RHB • ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 72


State 52

    8 statement: identifier ASSIGN expression SEMICOLON •

    $default  reduce using rule 8 (statement)


State 53

   34 factor: LP expression RP •

    $default  reduce using rule 34 (factor)


State 54

   29 expression: NEW INTTYPE LHB • expression RHB

    INT          shift, and go to state 18
    LP           shift, and go to state 19
    EXCLAMATION  shift, and go to state 20
    NEW          shift, and go to state 21
    IDENTIFIER   shift, and go to state 5
    TRUE         shift, and go to state 22
    FALSE        shift, and go to state 23
    THIS         shift, and go to state 24

    expression  go to state 73
    factor      go to state 26
    identifier  go to state 27


State 55

   30 expression: NEW identifier LP • RP

    RP  shift, and go to state 74


State 56

   12 expression: expression • PLUSOP expression
   12           | expression PLUSOP expression •
   13           | expression • MINUSOP expression
   14           | expression • MULTOP expression
   15           | expression • DIVOP expression
   16           | expression • ASSIGN expression
   17           | expression • GT expression
   18           | expression • LT expression
   19           | expression • EQ expression
   20           | expression • OR expression
   21           | expression • AND expression
   22           | expression • LHB expression RHB
   23           | expression • PERIOD LENGTH
   24           | expression • PERIOD identifier LP expression COMMA expression RP

    MULTOP  shift, and go to state 38
    DIVOP   shift, and go to state 39
    LHB     shift, and go to state 41
    PERIOD  shift, and go to state 48

    LHB       [reduce using rule 12 (expression)]
    PERIOD    [reduce using rule 12 (expression)]
    $default  reduce using rule 12 (expression)


State 57

   12 expression: expression • PLUSOP expression
   13           | expression • MINUSOP expression
   13           | expression MINUSOP expression •
   14           | expression • MULTOP expression
   15           | expression • DIVOP expression
   16           | expression • ASSIGN expression
   17           | expression • GT expression
   18           | expression • LT expression
   19           | expression • EQ expression
   20           | expression • OR expression
   21           | expression • AND expression
   22           | expression • LHB expression RHB
   23           | expression • PERIOD LENGTH
   24           | expression • PERIOD identifier LP expression COMMA expression RP

    MULTOP  shift, and go to state 38
    DIVOP   shift, and go to state 39
    LHB     shift, and go to state 41
    PERIOD  shift, and go to state 48

    LHB       [reduce using rule 13 (expression)]
    PERIOD    [reduce using rule 13 (expression)]
    $default  reduce using rule 13 (expression)


State 58
